add the four regions figure data

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -18,6 +18,11 @@
             （点击此链接下载：<a href="https://covid.ourworldindata.org/data/owid-covid-data.csv">ourworldindata</a>）
             <br><br>
             <input type="file" name="ourworldindata" accept=".csv"/>
+            <br><br>
+            <hr>
+            各个区域确诊与治愈数量excel文件上传：
+            <br><br>
+            <input type="file" name="regionsdata" accept=".xlsx"/>
             <br><hr>
             <input type="submit" value="提交"/>
             <br><br><br>
